--- a/public/index.html
+++ b/public/index.html
@@ -9,3 +9,4 @@
   </body>
 </html>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
