--- a/public/index.html
+++ b/public/index.html
@@ -10,3 +10,10 @@
 </html>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  integrity="sha512-papJ4zyXx5HcCMHn1S6SBHtNmD+rZJfi8bWvKUV8pZ7QcmcZl+fYvZT3F+pr0q4fDqUdDnF77TgfNslH6+JlA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
